Reuse BufferStack